Adding jvm args